--- a/app/styles/components.css
+++ b/app/styles/components.css
@@ -121,20 +121,20 @@
 
   .button:disabled,
   .button:disabled:hover {
-    --bg-color: theme(colors.neutral.200);
-    color: theme(colors.neutral.400);
+    --bg-color: theme(colors.gray.200);
+    color: theme(colors.gray.400);
   }
 
   .button:disabled {
     transform: none;
   }
 
-  .button-neutral {
-    --bg-color: theme(colors.neutral.800);
+  .button-gray {
+    --bg-color: theme(colors.gray.800);
   }
 
-  .button-neutral:hover {
-    --bg-color: theme(colors.neutral.900);
+  .button-gray:hover {
+    --bg-color: theme(colors.gray.900);
   }
 
   .button-primary {
