--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -9,11 +9,17 @@
 
 :root {
   --header-height: theme("height.16");
-  --h-screen-without-header: calc(100vh - var(--header-height));
+  --navbar-container-height: calc(var(--header-height) + theme(padding.4));
+  --h-screen-without-header: calc(100vh - var(--navbar-container-height));
   --max-content-width: theme("maxWidth.screen-xl");
   --default-gap: 1rem;
   --default-radius: 6px;
   --default-border-color: theme("colors.gray.300");
+}
+
+::selection {
+  color: white;
+  background: theme(colors.primary.500);
 }
 
 body {
@@ -61,7 +67,7 @@ html {
   display: block;
 }
 
-.transitions-be-gone * {
+.notransition * {
   transition: none !important;
   -webkit-transition: none !important;
   -moz-transition: none !important;
@@ -71,7 +77,8 @@ html {
 
 @layer base {
   .app {
-    background-color: theme(backgroundColor.gray.100);
+    background-color: theme(backgroundColor.base-300);
+    color: theme(textColor.base-content);
   }
 
   .main {
@@ -79,7 +86,8 @@ html {
     flex-direction: column;
     flex-wrap: wrap;  
     max-width: 100vw;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    min-height: calc(100vh - var(--header-height));
     height: 100%;
     width: 100%;
     padding-left: theme(padding.4);
@@ -90,7 +98,7 @@ html {
 
   @screen lg {
     .main {
-      min-height: var(--h-screen-without-header);
+      min-height: calc(100vh - var(--navbar-container-height));
     }
   }
 }
