feat(css): markdown images are now more rounded lol

--- a/app/styles/markdown.css
+++ b/app/styles/markdown.css
@@ -1,6 +1,6 @@
 @layer base {
   .markdown-content img {
-    border-radius: theme(borderRadius.box);
+    border-radius: theme(borderRadius.xl);
   }
 
   .markdown-content .icon-link::after {
