--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -29,7 +29,7 @@ body {
 
 *::-webkit-scrollbar {
   width: 8px;
-  height: 8px
+  height: 8px;
 }
 
 *::-webkit-scrollbar,
@@ -84,7 +84,7 @@ html {
   .main {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;  
+    flex-wrap: wrap;
     max-width: 100vw;
     /* min-height: 100vh; */
     min-height: calc(100vh - var(--header-height));
